--- a/package.json
+++ b/package.json
@@ -5,28 +5,28 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "eject": "expo eject",
     "build:android": "eas build --platform android",
     "submit:android": "eas submit --platform android"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~3.1.3",
-    "expo": "~50.0.0",
-    "expo-constants": "~15.4.0",
+    "@expo/metro-runtime": "~6.1.2",
+    "expo": "~54.0.0",
+    "expo-constants": "~18.0.13",
     "expr-eval": "^2.0.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-native": "0.73.6",
-    "react-native-gesture-handler": "~2.14.0",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.27.0",
-    "react-native-web": "^0.19.13"
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.5",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-web": "^0.21.0"
   },
   "devDependencies": {
-    "@types/react": "~18.2.0",
+    "@types/react": "~19.1.10",
     "@types/react-native": "^0.73.0",
     "typescript": "^5.3.3"
   },
