--- a/eas.json
+++ b/eas.json
@@ -1,7 +1,8 @@
 {
   "cli": {
     "version": ">= 5.4.0",
-    "promptToConfigurePushNotifications": false
+    "promptToConfigurePushNotifications": false,
+    "appVersionSource": "local"
   },
   "build": {
     "production": {
@@ -15,15 +16,9 @@
       }
     },
     "development": {
-      "development": true,
-      "distribution": "internal"
-    }
-  },
-  "submit": {
-    "production": {
       "android": {
-        "serviceAccount": "./service-account.json",
-        "track": "internal"
+        "buildType": "apk",
+        "distribution": "internal"
       }
     }
   }
